fix(modal): tighten up layout, new spacing utils

--- a/website/client/src/assets/scss/form.scss
+++ b/website/client/src/assets/scss/form.scss
@@ -19,10 +19,10 @@ label small {
 // Inputs and texteares
 
 input, textarea, input.form-control, textarea.form-control {
-  padding: 10px 16px;
+  padding: 4px 12px;
   border-radius: 2px;
   font-size: 14px;
-  line-height: 1.43;
+  line-height: 1.71;
   color: $gray-50;
   border: 1px solid $gray-400;
 
