--- a/website/client/src/assets/scss/typography.scss
+++ b/website/client/src/assets/scss/typography.scss
@@ -53,7 +53,7 @@ h1 {
 
 h2 {
   font-size: 20px;
-  line-height: 1.2;
+  line-height: 1.4;
   margin-bottom: 16px;
 }
 
@@ -67,6 +67,13 @@ h3 {
 h4 {
   font-size: 14px;
   line-height: 1.43;
+}
+
+label {
+  font-size: 14px;
+  font-weight: bold;
+  line-height: 1.71;
+  margin: 0px;
 }
 
 .textCondensed {
